configure build3