@@ -1,20 +1,12 @@
 FROM gradle:7.6-jdk  AS TEMP_BUILD_IMAGE
-ENV APP_HOME=/usr/app/
-WORKDIR $APP_HOME
-COPY build.gradle settings.gradle $APP_HOME
-
-COPY gradle $APP_HOME/gradle
 COPY --chown=gradle:gradle . /home/gradle/src
-USER root
-RUN chown -R gradle /home/gradle/src
-
-RUN gradle build || return 0
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
 
 # actual container
 FROM openjdk:17-jdk-alpine
-ENV ARTIFACT_NAME=bot-0.0.1-SNAPSHOT.jar
-ENV APP_HOME=/usr/app/
+RUN mkdir /app
 
-WORKDIR $APP_HOME
-COPY --from=TEMP_BUILD_IMAGE $APP_HOME/build/libs/$ARTIFACT_NAME .
-ENTRYPOINT exec java -jar ${ARTIFACT_NAME}
+COPY --from=build /home/gradle/src/build/libs/bot-0.0.1-SNAPSHOT.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
